--- a/Ui/borrower.ui
+++ b/Ui/borrower.ui
@@ -6,22 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>438</width>
-    <height>355</height>
+    <width>611</width>
+    <height>476</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="borrowLabel">
+   <item row="4" column="1">
+    <widget class="QPushButton" name="CodeBtn">
      <property name="text">
-      <string>List Peminjam</string>
+      <string>Masukkan Kode</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0" colspan="2">
     <widget class="QTableWidget" name="ItemSelect">
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
@@ -32,6 +32,23 @@
        <string>Nama Peminjam</string>
       </property>
      </column>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="borrowLabel">
+     <property name="text">
+      <string>List Peminjam, klik untuk memilih atau masukkan kode</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QLineEdit" name="SearchBar">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="placeholderText">
+      <string>Cari Nama Peminjam</string>
+     </property>
     </widget>
    </item>
   </layout>
