QOL Merge Borrow And Return Window Into One Window

--- a/Ui/main.ui
+++ b/Ui/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>594</width>
+    <width>905</width>
     <height>452</height>
    </rect>
   </property>
@@ -16,14 +16,17 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="3" column="1">
-      <widget class="QPushButton" name="PijamBtn">
+     <property name="sizeConstraint">
+      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+     </property>
+     <item row="1" column="3">
+      <widget class="QLabel" name="borrowLabel">
        <property name="text">
-        <string>Pijam</string>
+        <string>List Peminjam, klik untuk memilih atau masukkan kode</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="2">
+     <item row="2" column="0" rowspan="4" colspan="3">
       <widget class="QTableWidget" name="ItemSelect">
        <property name="sizeAdjustPolicy">
         <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
@@ -92,19 +95,78 @@
        </item>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
+     <item row="4" column="3">
+      <widget class="QTableWidget" name="ItemSelect_2">
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <row/>
+       <column>
+        <property name="text">
+         <string>Nama Peminjam</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+     <item row="2" column="3">
+      <widget class="QLineEdit" name="SearchBar">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>Cari Nama Peminjam</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Pilih Item Yang Ingin Dipinjam</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="RtnWindow">
+     <item row="4" column="4">
+      <layout class="QGridLayout" name="gridLayout_2"/>
+     </item>
+     <item row="6" column="3" rowspan="2">
+      <widget class="QPushButton" name="CodeBtn">
        <property name="text">
-        <string>Kembalikan Barang</string>
+        <string>Masukkan Kode</string>
        </property>
       </widget>
+     </item>
+     <item row="6" column="0" rowspan="2">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="6" column="1" rowspan="2" colspan="2">
+      <widget class="QPushButton" name="PijamBtn">
+       <property name="text">
+        <string>Pijam</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
