--- a/Ui/admin.ui
+++ b/Ui/admin.ui
@@ -24,7 +24,7 @@
    <item row="2" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="PeminjamTab">
       <attribute name="title">
@@ -73,12 +73,12 @@
          </column>
          <column>
           <property name="text">
-           <string>Tanggal Pinjam</string>
+           <string>Key</string>
           </property>
          </column>
          <column>
           <property name="text">
-           <string>Tanggal Kembali</string>
+           <string>Tanggal Pinjam</string>
           </property>
          </column>
         </widget>
@@ -99,6 +99,9 @@
        </item>
        <item row="0" column="1">
         <widget class="QPushButton" name="HapusItemBtn">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
           <string>Hapus Item/Barang</string>
          </property>
@@ -124,7 +127,7 @@
          </column>
          <column>
           <property name="text">
-           <string>Jumlah Total</string>
+           <string>Jumlah Sisa</string>
           </property>
          </column>
         </widget>
